tests/compile_fail/try_from/duplicate_empty_type.stderr
error: empty variant not supported when using non-repr `try_from`
 --> tests/compile_fail/try_from/duplicate_empty_type.rs:4:5
  |
4 |     Field,
  |     ^^^^^
